# ant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE-MIT  PERF-LAB.md  PLAN.md  PSS-GSOC.md  README.md  REPORT.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-ios.yml  release.yml  upload-integration.yml
conformance/: README.md  divergences.json
conformance/beejs/: README.md  package-lock.json  package.json  run.mjs
conformance/beemock/: .gitignore  go.mod  go.sum  main.go
conformance/vectorgen/: act.go  go.mod  go.sum  main.go
conformance/vectors/: act.json  cac.json  encryption.json  feed_epoch.json  feed_sequence.json  feed_updates.json  redundancy.json  replicas.json  rs_files.json  soc.json  stamps.json
contracts/: BzzSwapHelper.sol
crates/ant-chain/: Cargo.toml
crates/ant-chain/examples/: dry_run_wallet.rs
crates/ant-chain/src/: chequebook.rs  chequebook_store.rs  discover.rs  lib.rs  tx.rs
crates/ant-conformance/: Cargo.toml
crates/ant-conformance/src/: lib.rs  memnode.rs
crates/ant-conformance/tests/: act_vectors.rs  chunk_stream.rs  differential.rs  encryption.rs  feeds_matrix.rs  manifest_fuzz.rs  memnode.rs  rs.rs  rs_encode.rs  vectors.rs
crates/ant-control/: Cargo.toml
crates/ant-control/src/: activity.rs  client.rs  command.rs  lib.rs  protocol.rs  server.rs
crates/ant-crypto/: Cargo.toml
crates/ant-crypto/examples/: mine_overlay.rs
crates/ant-ffi/: Cargo.toml  README.md
crates/ant-ffi/examples/: upload_smoke.rs  verify_smoke.rs
crates/ant-ffi/include/: ant.h
crates/ant-ffi/src/: drive.rs  gateway.rs  jni.rs  lib.rs  manifest.rs  stream.rs
crates/ant-gateway/: Cargo.toml  README.md
crates/ant-gateway/src/: act.rs  chain.rs  chainreader.rs  chunk_stream.rs  cors.rs  error.rs  fallback.rs  handle.rs  lib.rs  pins.rs  retrieval.rs  router.rs  settlements.rs  stamps.rs  status.rs  stewardship.rs  stubs.rs  subscribe.rs  tags.rs
crates/ant-gateway/tests/: chain.rs  cors.rs  fallback.rs  freedom_dropin.rs  large_file_streaming.rs  pins.rs  retrieval.rs  status.rs  stubs.rs  subscribe_ws.rs
crates/ant-gateway/tests/common/: mod.rs
crates/ant-node/: Cargo.toml
crates/ant-node/src/: lib.rs
crates/ant-node/src/uploads/: mod.rs  state.rs
crates/ant-p2p/: Cargo.toml
crates/ant-p2p/examples/: cheque_smoke.rs
crates/ant-p2p/src/: behaviour.rs  dial.rs  dnsaddr.rs  handshake.rs  lib.rs  lurker.rs  lurker_registry.rs  messaging.rs  peerstore.rs  pseudosettle.rs  pullsync.rs  push_pseudosettle.rs  pushsync_swap.rs  routing.rs  sinks.rs  swap.rs  underlay.rs
crates/ant-postage/: Cargo.toml
crates/ant-postage/src/: beestore.rs  lib.rs
crates/ant-retrieval/: Cargo.toml
crates/ant-retrieval/examples/: disk_cache_bench.rs  litter_disk_cache_bench.rs
crates/ant-retrieval/src/: accounting.rs  act.rs  cache.rs  counters.rs  disk_cache.rs  enc_split.rs  feed.rs  fetcher.rs  joiner.rs  lib.rs  manifest_writer.rs  mantaray.rs  progress.rs  push_load.rs  push_skip_cache.rs  pushsync.rs  pushsync_settlement.rs  rs.rs  rs_encode.rs  splitter.rs  traversal.rs
crates/ant-retrieval/tests/: bzz_fixture.rs
crates/antctl/: Cargo.toml
crates/antctl/src/: main.rs  pin.rs
crates/antd/: Cargo.toml
crates/antd/src/: chainreader.rs  config.rs  keystore.rs  main.rs
crates/antop/: Cargo.toml
crates/antop/src/: main.rs
examples/android-download/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
examples/ios-download/: README.md
perf/: .gitignore  run-baseline-backfill.sh  run-baselines-big.sh  run-baselines-cheap.sh  run-exp1-pseudosettle.sh  soak_summary.py  summarize.py
perf/pss-gsoc-demos/: gsoc_e2e.mjs  gsoc_two_updates.mjs  gsoc_two_updates_diag.mjs  multi_node_rendezvous.mjs  pss_e2e.mjs  rendezvous_demo.mjs  symmetric_rendezvous.mjs
perf/results/: baseline-download-run1-1783261643.json  baseline-download-run2-1783261730.json  baseline-download-run3-1783261816.json  baseline-download-run4-1783261904.json  baseline-download-run5-1783261990.json  baseline-feed-run1-1783261173.json  baseline-feed-run2-1783261281.json  baseline-feed-run3-1783261359.json  baseline-feed-run4-1783261446.json  baseline-feed-run5-1783261559.json  baseline-upload-1mib-run1-1783260660.json  baseline-upload-1mib-run2-1783260673.json  baseline-upload-1mib-run3-1783260686.json  baseline-upload-1mib-run4-1783260700.json  baseline-upload-1mib-run5-1783260717.json  baseline-upload-256mib-run1-1783265449.json  baseline-upload-32mib-run1-1783260785.json  baseline-upload-32mib-run2-1783260861.json  baseline-upload-32mib-run3-1783260934.json  baseline-upload-32mib-run4-1783261002.json  baseline-upload-32mib-run5-1783261078.json  baseline-upload-512mib-run1-1783270650.json  baseline-warmup-run1-1783260610.json  baseline-warmup-run2-1783260615.json  baseline-warmup-run3-1783260618.json  baseline-warmup-run4-1783260622.json  baseline-warmup-run5-1783260626.json  baseline256bf-upload-256mib-run1-1783293226.json  baseline256bf-upload-256mib-run1-1783296756.json  baseline256bf-upload-256mib-run1-1783299790.json  exp1-off-upload-32mib-run1-1783270794.json  exp1-off-upload-32mib-run2-1783270884.json  exp1-off-upload-32mib-run3-1783271026.json  exp1-pseudosettle-256-upload-256mib-run1-1783274284.json  exp1-pseudosettle-upload-32mib-run1-1783270814.json  exp1-pseudosettle-upload-32mib-run2-1783270952.json  exp1-pseudosettle-upload-32mib-run3-1783271116.json  exp12-512-proof-upload-512mib-run1-1783282394.json  exp12-512-proof1-upload-512mib-run1-1783278811.json  exp12-512-proof3-upload-512mib-run1-1783286036.json  (+59 more)
perf/state/: feeds.json
scripts/: bench-bee-cutover.sh  compare_litter_disk_cache.sh  dev_verify_gnosis_env.py  gguf-watchdog.sh  publish-gguf-status.sh  reliability_findings.md  reliability_nodes.sh  reliability_probe.py  reliability_report_before.json  reliability_report_before.md  run_bee_sharky_litter_bench.sh  run_upload_integration.sh  upload_integration_test.py  verify-bzz-get.sh
scripts/bee_sharky_litter_bench/: main.go
xtask/: Cargo.toml
xtask/src/: main.rs
(+53 files in other folders)
