[workspace]
resolver = "2"
members = [
    "crates/ant-control",
    "crates/ant-crypto",
    "crates/ant-gateway",
    "crates/ant-p2p",
    "crates/ant-retrieval",
    "crates/ant-node",
    "crates/antd",
    "crates/antctl",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/ethersphere/ant"

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal", "time", "net", "io-util", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hex = "0.4.3"
sha3 = "0.10.8"
k256 = { version = "0.13.4", features = ["ecdsa", "sha256", "digest"] }
prost = "0.13.5"
unsigned-varint = { version = "0.8.0", features = ["futures"] }
libp2p = { version = "0.56.0", features = [
    "tcp",
    "dns",
    "ecdsa",
    "noise",
    "yamux",
    "identify",
    "ping",
    "macros",
    "secp256k1",
    "tokio",
] }
anyhow = "1.0.98"
async-trait = "0.1.89"
axum = "0.8.9"
hyper = "1.9.0"
