[workspace]
resolver = "2"
members = [
  "crates/ant-chain",
  "crates/ant-control",
  "crates/ant-crypto",
  "crates/ant-ffi",
  "crates/ant-gateway",
  "crates/ant-node",
  "crates/ant-p2p",
  "crates/ant-postage",
  "crates/ant-retrieval",
  "crates/antctl",
  "crates/antd",
  "xtask",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/ethersphere/ant"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.5.37", features = ["derive"] }
hex = "0.4.3"
hyper = "1.9.0"
k256 = { version = "0.13.4", features = ["digest", "ecdsa", "sha256"] }
libp2p = { version = "0.56.0", features = [
  "dns",
  "ecdsa",
  "identify",
  "macros",
  "noise",
  "ping",
  "secp256k1",
  "tcp",
  "tokio",
  "upnp",
  "yamux",
] }
prost = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unsigned-varint = { version = "0.8.0", features = ["futures"] }
