[package]
name = "ant-ffi"
version = "0.4.0"
edition.workspace = true

# staticlib for the iOS simulator + device slices (linked into the Xcode
# app) and rlib so other workspace crates can keep using the public
# Rust API. We deliberately skip `cdylib`: macOS / iOS linkers prefer a
# dylib over a staticlib when both sit in the library search path, and
# the dylib would bake an absolute `target/.../libant_ffi.dylib` path
# into the app's load commands — fine on the build host, dead on the
# simulator. Desktop consumers that want dynamic loading can re-enable
# it behind a feature flag when the proper mobile artefact (UniFFI)
# lands.
[lib]
crate-type = ["rlib", "staticlib"]
name = "ant_ffi"

[dependencies]
ant-control = { path = "../ant-control" }
ant-crypto = { path = "../ant-crypto" }
# `default-features = false` removes the `chain-rpc` feature from the
# transitive ant-chain dep, dropping `reqwest` (and its `hyper-rustls`
# / `ring` chain) from the iOS slice. Mobile light-clients only
# download chunks; the postage / chequebook JSON-RPC writers belong
# to desktop / antd, which keep the feature on through their own
# default-features = true import of ant-chain.
ant-node = { path = "../ant-node", default-features = false }
ant-p2p = { path = "../ant-p2p", default-features = false }
ant-retrieval = { path = "../ant-retrieval" }
hex.workspace = true
k256.workspace = true
libp2p.workspace = true
percent-encoding = "2.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
