[package]
name = "ant-ffi"
version = "0.5.2"
edition.workspace = true

# staticlib for the iOS simulator + device slices (linked into the Xcode
# app) and rlib so other workspace crates can keep using the public
# Rust API. The Android `cdylib` shape is not declared here on purpose:
# macOS / iOS linkers prefer a dylib over a staticlib when both sit in
# the library search path, and a `cdylib` entry would bake an absolute
# `target/.../libant_ffi.dylib` path into the iOS app's load commands —
# fine on the build host, dead on the simulator. Instead, the Android
# slice is built with `cargo build … --crate-type cdylib` from
# `xtask::build-android-*`, which overrides this list at build time and
# emits a single `libant_ffi.so`. Desktop consumers that want dynamic
# loading can re-enable cdylib behind a feature flag when the proper
# mobile artefact (UniFFI) lands.
[lib]
crate-type = ["rlib", "staticlib"]
name = "ant_ffi"

[features]
# Compile the JNI surface in `src/jni.rs`. Off by default because the
# only consumer is the Android smoke-test app in
# `examples/android-download/`; iOS, desktop tests, and `antd` never
# reference it and don't need to pay the `jni` crate compile cost.
# `cargo xtask build-android-*` flips this on; everything else leaves
# it off.
jni = ["dep:jni"]

[dependencies]
ant-control = { path = "../ant-control" }
ant-crypto = { path = "../ant-crypto" }
# `default-features = false` removes the `chain-rpc` feature from the
# transitive ant-chain dep, dropping `reqwest` (and its `hyper-rustls`
# / `ring` chain) from the iOS slice. Mobile light-clients only
# download chunks; the postage / chequebook JSON-RPC writers belong
# to desktop / antd, which keep the feature on through their own
# default-features = true import of ant-chain.
ant-node = { path = "../ant-node", default-features = false }
ant-p2p = { path = "../ant-p2p", default-features = false }
ant-retrieval = { path = "../ant-retrieval" }
hex.workspace = true
# Optional JNI bindings. Pulled in only when the `jni` feature flag
# above is on (i.e. for Android cross-builds). The crate compiles on
# every host so a `cargo check --features jni` on macOS still works
# for IDE-driven type-checking; the actual JNI exports inside
# `src/jni.rs` are platform-independent C-ABI symbols that simply
# happen to be useful only when loaded by an Android JVM.
jni = { version = "0.22.4", optional = true }
k256.workspace = true
libp2p.workspace = true
percent-encoding = "2.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
