[package]
name = "ant-gateway"
version = "0.3.4"
edition.workspace = true

# Bee-shaped HTTP gateway in front of `antd`. The crate is feature-gated so
# embedders that don't need the HTTP surface (most importantly `ant-ffi` for
# the mobile artefact) can keep it — and its `axum` / `hyper` transitive
# closure — out of their dependency graph entirely.
[features]
default = ["http-api"]
http-api = ["dep:axum", "dep:hyper", "dep:tower"]

[dependencies]
ant-control = { path = "../ant-control" }
ant-retrieval = { path = "../ant-retrieval" }
async-trait.workspace = true
hex.workspace = true
bytes = "1.11.1"
futures = "0.3.31"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
tower = { version = "0.5.3", optional = true, features = ["util"] }

[dev-dependencies]
ant-crypto = { path = "../ant-crypto" }
anyhow.workspace = true
sha2 = "0.11.0"
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
bytes = "1.11.1"
