[package]
name = "ant-gateway"
version = "0.5.26"
edition.workspace = true
license.workspace = true

[dependencies]
ant-control = { path = "../ant-control" }
ant-crypto = { path = "../ant-crypto", optional = true }
ant-retrieval = { path = "../ant-retrieval" }
async-trait.workspace = true
axum = { workspace = true, optional = true }
bytes = "1.11.1"
futures = "0.3.31"
hex.workspace = true
hyper = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
# Tar reader for `POST /bzz` collection uploads. Pure-Rust, no compression
# support; we only need to enumerate (header, body) pairs from an
# uncompressed archive (`tar -cf out.tar dir/`). Bee accepts the same
# format on its own /bzz collection endpoint.
tar = "0.4.45"
thiserror.workspace = true
tokio.workspace = true
tower = { version = "0.5.3", features = ["util"], optional = true }
tracing.workspace = true

[dev-dependencies]
ant-crypto = { path = "../ant-crypto" }
anyhow.workspace = true
async-trait.workspace = true
bytes = "1.11.1"
http-body-util = "0.1.3"
k256.workspace = true
sha2 = "0.11.0"
tower = { version = "0.5.3", features = ["util"] }

# Bee-shaped HTTP gateway in front of `antd`. The crate is feature-gated so
# embedders that don't need the HTTP surface (most importantly `ant-ffi` for
# the mobile artefact) can keep it — and its `axum` / `hyper` transitive
# closure — out of their dependency graph entirely.
[features]
default = ["http-api"]
http-api = ["dep:axum", "dep:hyper", "dep:tower", "dep:ant-crypto"]

[lints]
workspace = true
