[package]
name = "ant-node"
version = "0.3.18"
edition.workspace = true

[dependencies]
ant-control = { path = "../ant-control" }
ant-crypto = { path = "../ant-crypto" }
ant-p2p = { path = "../ant-p2p" }
ant-retrieval = { path = "../ant-retrieval" }
futures = "0.3.31"
hex.workspace = true
libp2p.workspace = true
memmap2 = "0.9.10"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
