[package]
name = "ant-node"
version = "0.5.13"
edition.workspace = true

[dependencies]
ant-control = { path = "../ant-control" }
ant-crypto = { path = "../ant-crypto" }
# Propagate `default-features = false` so the iOS slice (via ant-ffi)
# can opt out of the `reqwest`/`hyper-rustls`/`ring` chain used only by
# the JSON-RPC writer side of ant-chain. Desktop binaries (`antd`,
# `antctl`) keep the default `chain-rpc` feature on so nothing changes
# for them.
ant-p2p = { path = "../ant-p2p", default-features = false }
ant-retrieval = { path = "../ant-retrieval" }
futures = "0.3.31"
hex.workspace = true
libp2p.workspace = true
memmap2 = "0.9.10"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.27.0"

[features]
default = ["chain-rpc"]
chain-rpc = ["ant-p2p/chain-rpc"]

[lints]
workspace = true
