[package]
name = "ant-p2p"
version = "0.3.19"
edition.workspace = true

[[example]]
name = "cheque_smoke"
path = "examples/cheque_smoke.rs"

[dependencies]
ant-chain = { path = "../ant-chain" }
ant-control = { path = "../ant-control" }
ant-crypto = { path = "../ant-crypto" }
ant-postage = { path = "../ant-postage" }
ant-retrieval = { path = "../ant-retrieval" }
async-trait = "0.1.89"
base64 = "0.22.1"
futures = "0.3.31"
hex.workspace = true
hickory-resolver = { version = "0.25.2", default-features = false, features = [
  "system-config",
  "tokio"
] }
k256.workspace = true
libp2p.workspace = true
libp2p-stream = "0.4.0-alpha"
libp2p-swarm = "0.47.1"
primitive-types = { version = "0.14.0", default-features = false }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
unsigned-varint.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[lints]
workspace = true
