[package]
name = "ant-p2p"
version = "0.5.7"
edition.workspace = true

[[example]]
name = "cheque_smoke"
path = "examples/cheque_smoke.rs"

[dependencies]
# `default-features = false` cuts the `chain-rpc` chain (reqwest +
# hyper-rustls + ring) for embedders that only need ant-chain's
# pure-compute helpers (cheque signing, EIP-712 hashes, calldata
# builders) — `ant-ffi` is the canonical such embedder. The
# `chain-rpc` feature below propagates the cut back on for any consumer
# that does need a JSON-RPC client.
ant-chain = { path = "../ant-chain", default-features = false }
ant-control = { path = "../ant-control" }
ant-crypto = { path = "../ant-crypto" }
ant-postage = { path = "../ant-postage" }
ant-retrieval = { path = "../ant-retrieval" }
async-trait = "0.1.89"
base64 = "0.22.1"
futures = "0.3.31"
hex.workspace = true
hickory-resolver = { version = "0.25.2", default-features = false, features = [
  "system-config",
  "tokio"
] }
k256.workspace = true
libp2p.workspace = true
libp2p-stream = "0.4.0-alpha"
libp2p-swarm = "0.47.1"
primitive-types = { version = "0.14.0", default-features = false }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
unsigned-varint.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[features]
default = ["chain-rpc"]
chain-rpc = ["ant-chain/chain-rpc"]

[lints]
workspace = true
