[package]
name = "ant-postage"
version = "0.5.31"
edition.workspace = true
license.workspace = true

[dependencies]
ant-crypto = { path = "../ant-crypto" }
hex = { workspace = true }
k256 = { workspace = true }
# `bee-recover` only: read bee's `stamperstore` (a LevelDB) and msgpack-
# decode the persisted stamp-issuer bucket counters. Pure-Rust LevelDB
# reader so we don't pull in a C toolchain; off by default so embedders
# (ant-ffi / iOS) that never touch a bee data-dir stay lean.
rmp-serde = { version = "1.3.1", optional = true }
# `fs` (the default) gives the on-disk env we need to read a bee
# data-dir; we drop the rest (async runtimes) to stay lean.
rusty-leveldb = { version = "4.0.1", optional = true, default-features = false, features = ["fs"] }
serde = { workspace = true, optional = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

[features]
# Recover stamp-issuer bucket counters from a bee `stamperstore` when
# adopting a batch rediscovered on-chain (PLAN.md recovery, option a).
bee-recover = ["dep:rusty-leveldb", "dep:rmp-serde", "dep:serde"]

[lints]
workspace = true
