[package]
name = "ant-retrieval"
version = "0.3.18"
edition.workspace = true

[dependencies]
ant-crypto = { path = "../ant-crypto" }
ant-postage = { path = "../ant-postage" }
async-trait = "0.1.89"
crossbeam-channel = "0.5"
futures = "0.3.31"
hex.workspace = true
libp2p.workspace = true
libp2p-stream = "0.4.0-alpha"
lru = "0.17.0"
prost.workspace = true
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
unsigned-varint.workspace = true

[dev-dependencies]
k256.workspace = true
sha2 = "0.11.0"
tempfile = "3.27.0"

[lints]
workspace = true
