[package]
name = "ant-retrieval"
version = "0.5.33"
edition.workspace = true
license.workspace = true

[dependencies]
ant-crypto = { path = "../ant-crypto" }
ant-postage = { path = "../ant-postage" }
async-trait = "0.1.89"
crossbeam-channel = "0.5"
futures = "0.3.31"
hex.workspace = true
libp2p.workspace = true
libp2p-stream = "0.4.0-alpha"
lru = "0.17.0"
prost.workspace = true
# Reed-Solomon erasure decoding for swarm-redundancy-level reads. Same
# Backblaze/klauspost GF(2^8) construction bee uses; byte-compatibility
# with bee-generated parities is proven by ant-conformance's rs tests.
reed-solomon-erasure = "6.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
unsigned-varint.workspace = true

[dev-dependencies]
k256.workspace = true
sha2 = "0.11.0"
tempfile = "3.27.0"
# `test-util` enables `#[tokio::test(start_paused = true)]` so the feed
# finder's probe-retry backoff resolves in virtual time during tests.
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
