[package]
name = "antctl"
version = "0.3.11"
edition.workspace = true

[[bin]]
name = "antctl"
path = "src/main.rs"

[dependencies]
ant-chain = { path = "../ant-chain" }
ant-control = { path = "../ant-control" }
anyhow.workspace = true
clap = { workspace = true, features = ["env"] }
crossterm = "0.29.0"
dirs = "6.0.0"
hex.workspace = true
percent-encoding = "2.3"
primitive-types = { version = "0.14.0", default-features = false }
ratatui = "0.30.0"
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
