[package]
name = "antd"
version = "0.3.4"
edition.workspace = true

[[bin]]
name = "antd"
path = "src/main.rs"

[dependencies]
ant-chain = { path = "../ant-chain" }
ant-control = { path = "../ant-control" }
ant-crypto = { path = "../ant-crypto" }
ant-gateway = { path = "../ant-gateway" }
ant-node = { path = "../ant-node" }
ant-p2p = { path = "../ant-p2p" }
ant-postage = { path = "../ant-postage" }
ant-retrieval = { path = "../ant-retrieval" }
k256.workspace = true
libp2p.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
dirs = "6.0.0"
fs4 = "1.0.2"
rlimit = "0.11.0"
